--- a/public/index.html
+++ b/public/index.html
@@ -621,7 +621,7 @@
                   onmouseover="this.style.color='#00c300'"
                   onmouseout="this.style.color='white'"
                 >
-                  @xiaopiaozhu
+                  @runpiggy
                 </a>
               </p>
             </div>
@@ -637,10 +637,10 @@
             "
           >
             <p style="margin: 5px 0">
-              © 2024 兩隻老虎國際貿易有限公司 版權所有
+              © 2025 兩隻老虎國際貿易有限公司 版權所有
             </p>
             <p style="margin: 5px 0">
-              Two Running Tigers International Trading Co., Ltd.
+              Twotigers International Trading CO., LTD.
             </p>
           </div>
         </div>
