--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
           "
         >
           <div style="font-size: 36px">🧮</div>
-          <div style="font-weight: bold; margin: 10px 0">運費計算</div>
+          <div style="font-weight: bold; margin: 10px 0">運費試算</div>
         </a>
 
         <a
