修復後修改文字描述

--- a/public/parcel-public.html
+++ b/public/parcel-public.html
@@ -920,11 +920,11 @@
                 type="text"
                 class="form-control"
                 id="idNumber"
-                placeholder="清關備查用"
+                placeholder="清關驗櫃備查用"
                 required
               />
               <small style="color: #666"
-                >*身分證字號僅用於海關清關，我們會妥善保護您的個人資料</small
+                >*身分證字號僅用於海關驗櫃，我們會妥善保護您的個人資料</small
               >
             </div>
 
@@ -936,7 +936,9 @@
 
               <!-- 搬運上樓服務 -->
               <div class="service-option">
-                <h4>搬運上樓服務</h4>
+                <h4>
+                  搬運上樓服務(此部分費用由客戶自行付費給派送司機，不包含在跨境運費中)
+                </h4>
                 <div class="radio-group">
                   <label>
                     <input
@@ -987,7 +989,9 @@
 
               <!-- 組裝服務 -->
               <div class="service-option">
-                <h4>傢俱組裝服務</h4>
+                <h4>
+                  傢俱組裝服務(請向客服索取組裝師傅聯繫方式，由客戶自行預約詢價)
+                </h4>
                 <div class="radio-group">
                   <label>
                     <input
