提醒文字便紅色

--- a/public/parcel-public.html
+++ b/public/parcel-public.html
@@ -937,7 +937,9 @@
               <!-- 搬運上樓服務 -->
               <div class="service-option">
                 <h4>
-                  搬運上樓服務(此部分費用由客戶自行付費給派送司機，不包含在跨境運費中)
+                  搬運上樓服務<span style="color: red"
+                    >(此部分費用由客戶自行付費給派送司機，不包含在跨境運費中)</span
+                  >
                 </h4>
                 <div class="radio-group">
                   <label>
@@ -990,7 +992,9 @@
               <!-- 組裝服務 -->
               <div class="service-option">
                 <h4>
-                  傢俱組裝服務(請向客服索取組裝師傅聯繫方式，由客戶自行預約詢價)
+                  傢俱組裝服務<span style="color: red"
+                    >(請向客服索取組裝師傅聯繫方式，由客戶自行預約詢價)</span
+                  >
                 </h4>
                 <div class="radio-group">
                   <label>
