調整超重費、超長費變成附加費用而非單件計算2

--- a/public/index.html
+++ b/public/index.html
@@ -253,16 +253,16 @@
               元
             </li>
             <li>
-              單邊超過
+              整票超過
               <span style="color: #e74c3c; font-weight: bold">300cm</span>
               收取超長費
               <span style="color: #e74c3c; font-weight: bold">NT.800</span> 元
             </li>
             <li>
-              單件超過
+              整票超過
               <span style="color: #e74c3c; font-weight: bold">100kg</span>
               收取超重費
-              <span style="color: #e74c3c; font-weight: bold">NT.600</span> 元
+              <span style="color: #e74c3c; font-weight: bold">NT.800</span> 元
             </li>
             <li>台灣收件地請自行安排堆高機</li>
           </ul>
