--- a/public/index.html
+++ b/public/index.html
@@ -264,7 +264,7 @@
               收取超重費
               <span style="color: #e74c3c; font-weight: bold">NT.800</span> 元
             </li>
-            <li>台灣收件地請自行安排堆高機</li>
+            <li>超重件台灣收件地請自行安排堆高機</li>
           </ul>
         </div>
       </div>
