--- a/public/admin-members.html
+++ b/public/admin-members.html
@@ -193,11 +193,6 @@
         color: white;
       }
 
-      .btn-edit {
-        background: #28a745;
-        color: white;
-      }
-
       .btn-reset-password {
         background: #ffc107;
         color: #212529;
@@ -595,21 +590,24 @@
 
       // 頁面載入時初始化
       document.addEventListener("DOMContentLoaded", () => {
+        console.log("頁面載入完成，開始初始化...");
         loadStats();
         loadMembers();
 
         // 綁定 Enter 鍵搜尋
-        document
-          .getElementById("search-input")
-          .addEventListener("keypress", (e) => {
+        const searchInput = document.getElementById("search-input");
+        if (searchInput) {
+          searchInput.addEventListener("keypress", (e) => {
             if (e.key === "Enter") {
               applyFilters();
             }
           });
+        }
       });
 
       // 載入統計資料
       async function loadStats() {
+        console.log("載入統計資料...");
         try {
           const response = await fetch("/api/admin/customers/stats", {
             headers: {
@@ -617,8 +615,11 @@
             },
           });
 
+          console.log("統計 API 回應狀態:", response.status);
+
           if (response.ok) {
             const stats = await response.json();
+            console.log("統計資料:", stats);
             document.getElementById("stats-total").textContent =
               stats.total || 0;
             document.getElementById("stats-active").textContent =
@@ -627,14 +628,18 @@
               stats.inactive || 0;
             document.getElementById("stats-new").textContent =
               stats.newThisMonth || 0;
+          } else {
+            console.error("載入統計失敗，狀態碼:", response.status);
           }
         } catch (error) {
           console.error("載入統計資料失敗:", error);
         }
       }
 
-      // 載入會員列表
+      // 載入會員列表（修正版）
       async function loadMembers() {
+        console.log("開始載入會員列表...");
+
         try {
           const response = await fetch("/api/admin/customers", {
             headers: {
@@ -642,19 +647,70 @@
             },
           });
 
+          console.log("會員列表 API 回應狀態:", response.status);
+
           if (response.ok) {
-            allMembers = await response.json();
+            const data = await response.json();
+            console.log("收到的原始資料類型:", typeof data);
+            console.log("收到的原始資料:", data);
+
+            // 處理不同的回應格式
+            if (Array.isArray(data)) {
+              // 直接是陣列
+              allMembers = data;
+              console.log("資料是陣列格式");
+            } else if (data && typeof data === "object") {
+              // 是物件，嘗試找出會員陣列
+              if (Array.isArray(data.customers)) {
+                allMembers = data.customers;
+                console.log("資料在 customers 屬性中");
+              } else if (Array.isArray(data.data)) {
+                allMembers = data.data;
+                console.log("資料在 data 屬性中");
+              } else if (Array.isArray(data.members)) {
+                allMembers = data.members;
+                console.log("資料在 members 屬性中");
+              } else {
+                // 嘗試將物件轉為陣列
+                console.warn("未預期的資料格式，嘗試處理...");
+                allMembers = [];
+              }
+            } else {
+              console.error("資料格式完全不符合預期");
+              allMembers = [];
+            }
+
+            // 確保是陣列
+            if (!Array.isArray(allMembers)) {
+              console.error("allMembers 不是陣列，強制轉換為空陣列");
+              allMembers = [];
+            }
+
+            // 複製到 filteredMembers
             filteredMembers = [...allMembers];
+
+            console.log(`成功載入 ${allMembers.length} 筆會員資料`);
             renderMembers();
           } else {
-            throw new Error("載入失敗");
+            const errorText = await response.text();
+            console.error("API 錯誤回應:", errorText);
+            throw new Error(`載入失敗: ${response.status}`);
           }
         } catch (error) {
           console.error("載入會員列表失敗:", error);
+
+          // 確保變數是陣列
+          allMembers = [];
+          filteredMembers = [];
+
+          // 顯示錯誤訊息
           document.getElementById("membersTableBody").innerHTML = `
                     <tr>
                         <td colspan="9" style="text-align: center; color: #dc3545;">
-                            載入會員資料失敗，請重新整理頁面
+                            載入會員資料失敗：${error.message}<br>
+                            <button onclick="loadMembers()" style="margin-top: 10px; padding: 5px 15px; cursor: pointer;">
+                                重新載入
+                            </button>
                         </td>
                     </tr>
                 `;
@@ -663,72 +719,93 @@
 
       // 渲染會員列表
       function renderMembers() {
+        console.log("渲染會員列表，數量:", filteredMembers.length);
         const tbody = document.getElementById("membersTableBody");
 
-        if (filteredMembers.length === 0) {
+        if (!Array.isArray(filteredMembers) || filteredMembers.length === 0) {
           tbody.innerHTML = `
                     <tr>
                         <td colspan="9" style="text-align: center; color: #666;">
-                            沒有找到符合條件的會員
+                            沒有找到會員資料
                         </td>
                     </tr>
                 `;
           return;
         }
 
-        tbody.innerHTML = filteredMembers
-          .map(
-            (member) => `
-                <tr>
-                    <td>${member.id.substring(0, 8)}...</td>
-                    <td><strong>${member.name || "-"}</strong></td>
-                    <td>${member.email}</td>
-                    <td>${member.phone || "-"}</td>
-                    <td>${member.lineNickname || "-"}</td>
-                    <td>${new Date(member.createdAt).toLocaleDateString(
-                      "zh-TW"
-                    )}</td>
-                    <td style="text-align: center;">
-                        <span style="color: #1a73e8; font-weight: bold;">
-                            ${member._count?.orders || 0}
-                        </span>
-                    </td>
-                    <td>
-                        ${getStatusBadge(member)}
-                    </td>
-                    <td>
-                        <div class="action-buttons">
-                            <button class="btn-action btn-view" onclick="viewMemberDetail('${
-                              member.id
-                            }')">
-                                查看
-                            </button>
-                            <button class="btn-action btn-reset-password" onclick="resetPassword('${
-                              member.id
-                            }', '${member.name}')">
-                                重設密碼
-                            </button>
-                            <button class="btn-action btn-toggle-status ${
-                              member.isActive ? "" : "activate"
-                            }" 
-                                onclick="toggleStatus('${
-                                  member.id
-                                }', ${!member.isActive})">
-                                ${member.isActive ? "停用" : "啟用"}
-                            </button>
-                        </div>
-                    </td>
-                </tr>
-            `
-          )
-          .join("");
+        try {
+          tbody.innerHTML = filteredMembers
+            .map((member) => {
+              // 安全地取得值
+              const id = member.id || "";
+              const name = member.name || "-";
+              const email = member.email || "-";
+              const phone = member.phone || "-";
+              const lineNickname = member.lineNickname || "-";
+              const createdAt = member.createdAt
+                ? new Date(member.createdAt).toLocaleDateString("zh-TW")
+                : "-";
+              const orderCount = member._count?.orders || 0;
+              const isActive = member.isActive !== false;
+
+              return `
+                        <tr>
+                            <td>${
+                              id.length > 8 ? id.substring(0, 8) + "..." : id
+                            }</td>
+                            <td><strong>${name}</strong></td>
+                            <td>${email}</td>
+                            <td>${phone}</td>
+                            <td>${lineNickname}</td>
+                            <td>${createdAt}</td>
+                            <td style="text-align: center;">
+                                <span style="color: #1a73e8; font-weight: bold;">
+                                    ${orderCount}
+                                </span>
+                            </td>
+                            <td>
+                                ${getStatusBadge(member)}
+                            </td>
+                            <td>
+                                <div class="action-buttons">
+                                    <button class="btn-action btn-view" onclick="viewMemberDetail('${id}')">
+                                        查看
+                                    </button>
+                                    <button class="btn-action btn-reset-password" onclick="resetPassword('${id}', '${name.replace(
+                /'/g,
+                "\\'"
+              )}')">
+                                        重設密碼
+                                    </button>
+                                    <button class="btn-action btn-toggle-status ${
+                                      isActive ? "" : "activate"
+                                    }" 
+                                        onclick="toggleStatus('${id}', ${!isActive})">
+                                        ${isActive ? "停用" : "啟用"}
+                                    </button>
+                                </div>
+                            </td>
+                        </tr>
+                    `;
+            })
+            .join("");
+        } catch (error) {
+          console.error("渲染時發生錯誤:", error);
+          tbody.innerHTML = `
+                    <tr>
+                        <td colspan="9" style="text-align: center; color: #dc3545;">
+                            顯示資料時發生錯誤
+                        </td>
+                    </tr>
+                `;
+        }
       }
 
       // 取得狀態標籤
       function getStatusBadge(member) {
         const badges = [];
 
-        if (member.isActive) {
+        if (member.isActive !== false) {
           badges.push('<span class="status-badge active">啟用</span>');
         } else {
           badges.push('<span class="status-badge inactive">停用</span>');
@@ -743,6 +820,11 @@
 
       // 套用篩選
       function applyFilters() {
+        if (!Array.isArray(allMembers)) {
+          console.error("allMembers 不是陣列");
+          return;
+        }
+
         const searchTerm = document
           .getElementById("search-input")
           .value.toLowerCase();
@@ -766,8 +848,10 @@
 
           // 狀態篩選
           if (statusFilter) {
-            if (statusFilter === "active" && !member.isActive) return false;
-            if (statusFilter === "inactive" && member.isActive) return false;
+            if (statusFilter === "active" && member.isActive === false)
+              return false;
+            if (statusFilter === "inactive" && member.isActive !== false)
+              return false;
             if (statusFilter === "needs-reset" && !member.needPasswordChange)
               return false;
           }
@@ -779,15 +863,15 @@
         filteredMembers.sort((a, b) => {
           switch (sortBy) {
             case "newest":
-              return new Date(b.createdAt) - new Date(a.createdAt);
+              return new Date(b.createdAt || 0) - new Date(a.createdAt || 0);
             case "oldest":
-              return new Date(a.createdAt) - new Date(b.createdAt);
+              return new Date(a.createdAt || 0) - new Date(b.createdAt || 0);
             case "orders":
               return (b._count?.orders || 0) - (a._count?.orders || 0);
             case "name":
               return (a.name || "").localeCompare(b.name || "");
             default:
-              return new Date(b.createdAt) - new Date(a.createdAt);
+              return 0;
           }
         });
 
@@ -799,8 +883,11 @@
         document.getElementById("search-input").value = "";
         document.getElementById("filter-status").value = "";
         document.getElementById("filter-sort").value = "newest";
-        filteredMembers = [...allMembers];
-        renderMembers();
+
+        if (Array.isArray(allMembers)) {
+          filteredMembers = [...allMembers];
+          renderMembers();
+        }
       }
 
       // 查看會員詳情
@@ -870,12 +957,6 @@
                         ).toLocaleString("zh-TW")}</span>
                     </div>
                     <div class="detail-row">
-                        <span class="detail-label">最後更新：</span>
-                        <span class="detail-value">${new Date(
-                          member.updatedAt
-                        ).toLocaleString("zh-TW")}</span>
-                    </div>
-                    <div class="detail-row">
                         <span class="detail-label">帳號狀態：</span>
                         <span class="detail-value">
                             ${
@@ -891,7 +972,7 @@
                   member.orders && member.orders.length > 0
                     ? `
                     <div class="order-history">
-                        <h3>最近訂單記錄（最多10筆）</h3>
+                        <h3>最近訂單記錄</h3>
                         ${member.orders
                           .map(
                             (order) => `
@@ -969,10 +1050,12 @@
           if (response.ok) {
             const result = await response.json();
             alert(
-              `密碼已重設成功！\n新密碼：${result.temporaryPassword}\n請通知會員使用新密碼登入`
+              `密碼已重設成功！\n新密碼：${
+                result.temporaryPassword || "8888"
+              }\n請通知會員使用新密碼登入`
             );
             closeResetModal();
-            loadMembers(); // 重新載入列表
+            loadMembers();
           } else {
             const error = await response.json();
             alert(error.error || "重設密碼失敗");
@@ -1011,8 +1094,8 @@
 
           if (response.ok) {
             alert(`會員帳號已${action}`);
-            loadMembers(); // 重新載入列表
-            loadStats(); // 更新統計
+            loadMembers();
+            loadStats();
           } else {
             throw new Error("操作失敗");
           }
@@ -1024,7 +1107,7 @@
 
       // 匯出會員清單
       function exportMembers() {
-        if (filteredMembers.length === 0) {
+        if (!Array.isArray(filteredMembers) || filteredMembers.length === 0) {
           alert("沒有可匯出的會員資料");
           return;
         }
