--- a/public/admin-parcel-convert.html
+++ b/public/admin-parcel-convert.html
@@ -668,7 +668,7 @@
                 />
               </div>
               <div class="form-group">
-                <label for="actual-cbm">材積 (CBM)</label>
+                <label for="actual-cbm">材積 (才)</label>
                 <input
                   type="text"
                   id="actual-cbm"
